HTML validaition and accessibility testing

--- a/development/terminalfour/src/html/includes/footer.html
+++ b/development/terminalfour/src/html/includes/footer.html
@@ -42,9 +42,9 @@
                      <div class="footer-campus-info visible-xs">
 
                             <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
-                            <p><i class="fa fa-map-marker fa-lg"></i> <a href="javascript:void(0)">Denver, Colorado</a></p>
-                            <p><i class="fa fa-phone fa-lg"></i> <a href="javascript:void(0)">303-556-5740</a></p>
-                            <p><i class="fa fa-comments chat-icon fa-lg"></i> <a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
+                            <p><i role="presentation" class="fa fa-map-marker fa-lg"></i> <a href="javascript:void(0)">Denver, Colorado</a></p>
+                            <p><i role="presentation" class="fa fa-phone fa-lg"></i> <a href="javascript:void(0)">303-556-5740</a></p>
+                            <p><i role="presentation" class="fa fa-comments chat-icon fa-lg"></i> <a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
 
 
                       </div><!-- .campus-info  -->
@@ -70,12 +70,12 @@
                               </div>
                               <div class="social-mobile footer-links visible-xs"> 
                                   <ul class="list-unstyled footer-social">   
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-flickr fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-facebook-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-twitter-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-linkedin-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-instagram fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-flickr fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-youtube-square fa-2x"></i></a></li>
                                   </ul>
                               </div>    
                           </div><!-- // .footer-links-row -->
@@ -85,16 +85,16 @@
                       <div class="footer-campus-info hidden-xs">
 
                             <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
-                            <p><i class="fa fa-map-marker fa-lg"></i> <a href="javascript:void(0)">Denver, Colorado</a></p>
-                            <p><i class="fa fa-phone fa-lg"></i> <a href="javascript:void(0)">303-556-5740</a></p>
-                            <p><i class="fa fa-comments chat-icon fa-lg"></i> <a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
+                            <p><i role="presentation" class="fa fa-map-marker fa-lg"></i> <a href="javascript:void(0)">Denver, Colorado</a></p>
+                            <p><i role="presentation" class="fa fa-phone fa-lg"></i> <a href="javascript:void(0)">303-556-5740</a></p>
+                            <p><i role="presentation" class="fa fa-comments chat-icon fa-lg"></i> <a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
                             <ul class="list-unstyled footer-social">
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-flickr fa-2x"></i></a></li>
-                                    <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-facebook-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-twitter-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-linkedin-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-instagram fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-flickr fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-youtube-square fa-2x"></i></a></li>
                             </ul> 
 
                       </div><!-- .campus-info  -->
