--- a/development/terminalfour/src/html/includes/homepage-events.html
+++ b/development/terminalfour/src/html/includes/homepage-events.html
@@ -83,7 +83,7 @@
             <!-- ** // Event ** -->
             
         </div><!-- // .home-events-row -->
-        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">See all upcoming events</a> <i class="fa fa-angle-right fa-lg"></i></p>
+        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">See all upcoming events</a> <i role="presentation" class="fa fa-angle-right fa-lg"></i></p>
     </div><!-- // .home-events (col) -->
     
 </section>
