--- a/development/terminalfour/src/html/includes/homepage-feature-caption.html
+++ b/development/terminalfour/src/html/includes/homepage-feature-caption.html
@@ -4,14 +4,14 @@
             <img class="homepage-feature-caption-img" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />    
             <div class="homepage-feature-caption-text carousel-caption">
                 <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off. <code>[[Slider Item I ]]</code></h1>
-                <p class="clearfix main-button"><a href="javascript:void(0)" class="homepage-feature-caption-link feature-heading-sub">Read how we're powering careers and a 21st century economy <i class="fa fa-angle-right"></i></a> </p>
+                <p class="clearfix main-button"><a href="javascript:void(0)" class="homepage-feature-caption-link feature-heading-sub">Read how we're powering careers and a 21st century economy <i role="presentation" class="fa fa-angle-right"></i></a> </p>
             </div> 
         </div>  
         <div class="homepage-feature-caption-item item ">
             <img class="homepage-feature-caption-img" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />    
             <div class="homepage-feature-caption-text carousel-caption">
                 <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off. <code>[[Slider Item II ]]</code></h1>
-                <p class="clearfix main-button"><a href="javascript:void(0)" class="homepage-feature-caption-link feature-heading-sub ">Read how we're powering careers and a 21st century economy <i class="fa fa-angle-right"></i></a> </p>
+                <p class="clearfix main-button"><a href="javascript:void(0)" class="homepage-feature-caption-link feature-heading-sub ">Read how we're powering careers and a 21st century economy <i role="presentation" class="fa fa-angle-right"></i></a> </p>
             </div> 
         </div>
     </div>
