--- a/www-root/includes/homepage-news.html
+++ b/www-root/includes/homepage-news.html
@@ -1,4 +1,4 @@
-<!-- ** Homepage news ** -->
+    <!-- ** Homepage news ** -->
 <section class="homepage-feature" id="homepage-news">
     <div class="home-news-features">
         <h1 class="feature-heading-large">Transforming Lives. Impacting the World.</h1>
@@ -18,7 +18,7 @@
                     </div>
                     </a>
                 </div>
-                </a>
+                
             </div><!-- ./ .news-feature-item.featured -->
             <!-- regular featured news items -->
             <div class="news-features__small" data-mh="home-news"> 
@@ -29,7 +29,7 @@
                              <div class="news-feature-image">
                                  <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />    
                              </div>
-                             <div class="news-feature-text">
+                             <div class="news-feature-text">     
                                  <h1 class="feature-heading news-feature-heading">Helping girls find their path to follow their dreams.</h1>
                              </div>        
                              </a>
@@ -50,7 +50,7 @@
                 </div><!-- ./ .news-feature-items-wrap -->    
             </div><!-- ./ .news-feature-item --> 
         </div><!-- ./ .news-feature-items -->
-        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn homepage-btn__small">Read more roadrunner stories</a> <i class="fa fa-angle-right fa-lg"></i></p>
+        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn homepage-btn__small">Read more roadrunner stories</a> <i role="presentation" class="fa fa-angle-right fa-lg"></i></p>
     </div><!-- ./ .homepage-news-outer-col -->
 </section>
 <!-- ** .// Homepage news ** -->
