--- a/development/terminalfour/src/sass/msu-partials/_homepage-feature-caption.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-feature-caption.scss
@@ -40,7 +40,7 @@
     position: absolute;
     width: 2.5rem;
     background: transparent;
-    top: 50%;
+    top: 45%;
     transform: translateY(-50%);
     .fa { 
         display: inline-block;
@@ -53,6 +53,11 @@
     &.left {
         .fa { float: right;}
     } 
+}
+@media (min-width: 480px) {
+    .t4-slide .carousel-control {
+        top: 50%;
+    }
 }
 @media (min-width: 690px) {
     .t4-slide .carousel-control {
