--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -30,8 +30,8 @@
           <div class="">
             <ul class="nav navbar-nav navbar-center dropdown" id="nav-middle">
               <li id="nav-faculty">
-                <a class="mobile-header">About</a>
-                <ul class="pushdown-menu">
+                <a class="mobile-header mobile-about">About</a>
+                <ul class="pushdown-menu pushdown-about">
                   <li><a href="#">About</a></li>
                   <li><a href="#">Strategic Plan 2020</a></li>
                   <li><a href="#">Office of the President</a></li>
@@ -39,17 +39,11 @@
                   <li><a href="#">Our Past</a></li>
                   <li><a href="#">Questions / Comments</a></li>
                   <li><a href="#">Graduation / Commencement</a></li>
-                  <li>&nbsp;</li>
-                  <li>&nbsp;</li>
-                  <li>&nbsp;</li>
-                  <li>&nbsp;</li>
-                  <li>&nbsp;</li>
-                  <li>&nbsp;</li>
                  </ul>
                </li>
                <li id="nav-admissions">
-                 <a class="mobile-header">Prospective Students</a>
-                 <ul class="pushdown-menu">
+                 <a class="mobile-header mobile-ps">Prospective Students</a>
+                 <ul class="pushdown-menu pushdown-ps">
                    <li><a href="#">Prospective Students</a></li>
                    <li><a href="#">First-Time Undergraduate</a></li>
                    <li><a href="#">Transfer Students</a></li>
@@ -65,8 +59,8 @@
                  </ul>
                </li>
                <li id="nav-academics">
-                 <a class="mobile-header">Academics</a>
-                 <ul class="pushdown-menu">
+                 <a class="mobile-header mobile-academics">Academics</a>
+                 <ul class="pushdown-menu pushdown-academics">
                    <li><a href="/programs/">Academic Programs</a></li>
                    <li><a href="/las/">College of Letters, Arts and Sciences</a></li>
                    <li><a href="/cps/">College of Professional Studies</a></li>
@@ -76,13 +70,11 @@
                    <li><a href="#">Academic Support</a></li>
                    <li><a href="#">Online Courses/Extended Campus</a></li>
                    <li><a href="#">Special Programs</a></li>
-                   <li>&nbsp;</li>
-                   <li>&nbsp;</li>
                  </ul>
                </li>
                <li id="nav-campus">
-                 <a class="mobile-header">Campus Life</a>
-                 <ul class="pushdown-menu">
+                 <a class="mobile-header mobile-campus">Campus Life</a>
+                 <ul class="pushdown-menu pushdown-campus">
                    <li><a href="/campuslife/">Campus Life</a></li>
                    <li><a href="/studentactivities/">Student Activities</a></li>
                    <li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li>
@@ -91,15 +83,11 @@
                    <li><a href="/campuslife/studentpublications/">Student Media</a></li>
                    <li><a href="">Student Organizations</a></li>
                    <li><a href="">Student Resources</a></li>
-                   <li>&nbsp;</li>
-                   <li>&nbsp;</li>
-                   <li>&nbsp;</li>
-                   <li>&nbsp;</li>
                  </ul>
                </li>
                <li id="nav-alumni">
-                 <a class="mobile-header menu-last">Alumni</a>
-                 <ul class="pushdown-menu">
+                 <a class="mobile-header mobile-alumni menu-last">Alumni</a>
+                 <ul class="pushdown-menu pushdown-alumni">
                    <li><a href="/alumni/">Alumni</a></li>
                    <li><a href="/alumni/careerservices/">Career Services</a></li>
                    <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
@@ -132,36 +120,39 @@
         </nav>
 
       </div>
+
+      <!-- mobile search-input -->
+      <form action="https://www.msudenver.edu/search">
+        <div id="" class="" role="search" action="https://www.msudenver.edu/search">
+                <div id="content-nav-mobile">
+                  <div id="search-input" class="inner-addon left-addon search-input-mobile">
+                      <span class="glyphicon glyphicon-search glyphicon-opened-mobile"></span>
+                            <input  id="q"
+                              name="q"
+                              type="text"
+                              class="home-input search-text-mobile"
+                              placeholder="SEARCH MSU DENVER"
+                              tabindex="2";
+                              style="margin-left: -3px; outline: none;";
+                             >
+                      <!-- AUTO SUGGEST -->
+                      <!-- Code auto suggest server by DEV, PROD, etc. -->
+                      <div id="autoSuggestResults"></div>
+
+                      <!-- END AUTO SUGGEST -->
+                  </div>
+                </div>
+        </div>
+      </form>
+      <!-- end mobile search-input -->
+
     </div>
   </div>
 
   <!-- ******START PUSHDOWN MENU AND SEARCH BAR ****** -->
 
     <!--/.nav-collapse -->
-    <!-- mobile search-input -->
-    <form action="https://www.msudenver.edu/search">
-      <div id="" class="" role="search" action="https://www.msudenver.edu/search">
-              <div id="content-nav-mobile">
-                <div id="search-input" class="inner-addon left-addon search-input-mobile">
-                    <span class="glyphicon glyphicon-search glyphicon-opened-mobile"></span>
-                          <input  id="q"
-                            name="q"
-                            type="text"
-                            class="home-input search-text-mobile"
-                            placeholder="SEARCH MSU DENVER"
-                            tabindex="2";
-                            style="margin-left: -3px; outline: none;";
-                           >
-                    <!-- AUTO SUGGEST -->
-                    <!-- Code auto suggest server by DEV, PROD, etc. -->
-                    <div id="autoSuggestResults"></div>
 
-                    <!-- END AUTO SUGGEST -->
-                </div>
-              </div>
-      </div>
-    </form>
-    <!-- end mobile search-input -->
   <!-- ****** END PUSHDOWN MENU AND SEARCH BAR ****** -->
 </header>
 
@@ -206,13 +197,32 @@ $('.navbar-toggle').click(function(){
    $('.search-input-mobile').hide();
    $('.fa-bars').css('background-color', '#005fae');
    $('.glyphicon-search-mobile').css('background-color', 'transparent');
+   $('#content-nav').toggleClass('in');
 });
 
 // when menu item clicked, open/close pushdown menu
-$('.mobile-header').click(function(){
-   $('.pushdown-menu').slideToggle();
-});
-
+if ($(window).width() > 767) {
+  $('.mobile-header').click(function(){
+     $('.pushdown-menu').slideToggle();
+  });
+}
+else {
+  $('.mobile-about').click(function(){
+     $('.pushdown-about').slideToggle();
+  });
+  $('.mobile-ps').click(function(){
+     $('.pushdown-ps').slideToggle();
+  });
+  $('.mobile-academics').click(function(){
+     $('.pushdown-academics').slideToggle();
+  });
+  $('.mobile-campus').click(function(){
+     $('.pushdown-campus').slideToggle();
+  });
+  $('.mobile-alumni').click(function(){
+     $('.pushdown-alumni').slideToggle();
+  });
+};
 // open/close content-nav bar when search/close glyphs clicked
 $('.search-desktop').click(function(){
    $('#content-nav').css('max-height', '55px');
