mobile: menu width expands to whole row

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -383,19 +383,19 @@
 }
 
 #nav-faculty {
-  width: 11em;
+  width: auto;
 }
 #nav-admissions {
-  width: 12em;
+  width: auto;
 }
 #nav-academics {
-  width: 12em;
+  width: auto;
 }
 #nav-campus {
-  width: 10em;
+  width: auto;
 }
 #nav-alumni {
-  width: 10em;
+  width: auto;
 }
 #nav-search {
   width: 1em;
@@ -568,6 +568,24 @@
   }
   .faculty-staff, .faculty-staff a {
     display: block;
+  }
+  #nav-faculty {
+    width: 11em;
+  }
+  #nav-admissions {
+    width: 12em;
+  }
+  #nav-academics {
+    width: 12em;
+  }
+  #nav-campus {
+    width: 10em;
+  }
+  #nav-alumni {
+    width: 10em;
+  }
+  #nav-search {
+    width: 1em;
   }
 }
 
