add chevrons to mobile top menu items; adjust x-close position; add Raleway font

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -29,7 +29,7 @@
 
             <ul class="nav navbar-nav navbar-center dropdown" id="nav-middle">
               <li id="nav-faculty">
-                <a class="mobile-header mobile-about">About</a>
+                <a class="mobile-header mobile-about">About<span class="fa fa-chevron-down pull-right"></span></a>
                 <ul class="pushdown-menu pushdown-about">
                   <a href="#"><li>About</li></a>
                   <a href="#"><li>Strategic Plan 2020</li></a>
@@ -41,7 +41,7 @@
                  </ul>
                </li>
                <li id="nav-admissions">
-                 <a class="mobile-header mobile-ps">Prospective Students</a>
+                 <a class="mobile-header mobile-ps"><span class="fa fa-chevron-down pull-right"></span>Prospective Students</a>
                  <ul class="pushdown-menu pushdown-ps">
                    <a href="#"><li>Prospective Students</li></a>
                    <a href="#"><li>First-Time Undergraduate</li></a>
@@ -58,7 +58,7 @@
                  </ul>
                </li>
                <li id="nav-academics">
-                 <a class="mobile-header mobile-academics">Academics</a>
+                 <a class="mobile-header mobile-academics"><span class="fa fa-chevron-down pull-right"></span>Academics</a>
                  <ul class="pushdown-menu pushdown-academics">
                    <a href="/programs/"><li>Academic Programs</li></a>
                    <a href="/las/"><li>College of Letters, Arts and Sciences</li></a>
@@ -72,7 +72,7 @@
                  </ul>
                </li>
                <li id="nav-campus">
-                 <a class="mobile-header mobile-campus">Campus Life</a>
+                 <a class="mobile-header mobile-campus"><span class="fa fa-chevron-down pull-right"></span>Campus Life</a>
                  <ul class="pushdown-menu pushdown-campus">
                    <a href="/campuslife/"><li>Campus Life</li></a>
                    <a href="/studentactivities/"><li>Student Activities</li></a>
@@ -85,7 +85,7 @@
                  </ul>
                </li>
                <li id="nav-alumni">
-                 <a class="mobile-header mobile-alumni menu-last">Alumni</a>
+                 <a class="mobile-header mobile-alumni menu-last"><span class="fa fa-chevron-down pull-right"></span>Alumni</a>
                  <ul class="pushdown-menu pushdown-alumni">
                    <a href="/alumni/"><li>Alumni</li></a>
                    <a href="/alumni/careerservices/"><li>Career Services</li></a>
