--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -15,7 +15,7 @@
               <a href="http://msudenver.edu/admissions"><div class="col-xs-1 apply-button">APPLY</div></a>
               <a href="http://msudenver.edu/alumni/give/"><div class="col-xs-1 apply-button give-visit-buttons">GIVE</div></a>
               <a href="https://msudenver.edu/visit/"><div class="col-xs-1 apply-button give-visit-buttons">VISIT</div></a>
-              <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
+              <span class="fa fa-search fa-search-mobile"></span>
               <div class="col-xs-12 faculty-staff">
                 <a href="">Faculty &amp; Staff</a>
               </div>
@@ -29,78 +29,78 @@
 
             <ul class="nav navbar-nav navbar-center dropdown" id="nav-middle">
               <li id="nav-faculty">
-                <a class="mobile-header mobile-about">About</a>
+                <a class="mobile-header mobile-about">About<span class="fa fa-chevron-down pull-right"></span></a>
                 <ul class="pushdown-menu pushdown-about">
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Strategic Plan 2020</a></li>
-                  <li><a href="#">Office of the President</a></li>
-                  <li><a href="#">Board of Trustees</a></li>
-                  <li><a href="#">Our Past</a></li>
-                  <li><a href="#">Questions / Comments</a></li>
-                  <li><a href="#">Graduation / Commencement</a></li>
+                  <a href="#"><li>About</li></a>
+                  <a href="#"><li>Strategic Plan 2020</li></a>
+                  <a href="#"><li>Office of the President</li></a>
+                  <a href="#"><li>Board of Trustees</li></a>
+                  <a href="#"><li>Our Past</li></a>
+                  <a href="#"><li>Questions / Comments</li></a>
+                  <a href="#"><li>Graduation / Commencement</li></a>
                  </ul>
                </li>
                <li id="nav-admissions">
-                 <a class="mobile-header mobile-ps">Prospective Students</a>
+                 <a class="mobile-header mobile-ps"><span class="fa fa-chevron-down pull-right"></span>Prospective Students</a>
                  <ul class="pushdown-menu pushdown-ps">
-                   <li><a href="#">Prospective Students</a></li>
-                   <li><a href="#">First-Time Undergraduate</a></li>
-                   <li><a href="#">Transfer Students</a></li>
-                   <li><a href="#">Adult Students</a></li>
-                   <li><a href="#">Master&rsquo;s Programs</a></li>
-                   <li><a href="#">Military Veterans</a></li>
-                   <li><a href="#">International Students</a></li>
-                   <li><a href="#">Out-of-State</a></li>
-                   <li><a href="#">Re-Admit</a></li>
-                   <li><a href="#">Non-Degree</a></li>
-                   <li><a href="#">Concurrently Enrolled</a></li>
-                   <li><a href="#">Cost</a></li>
+                   <a href="#"><li>Prospective Students</li></a>
+                   <a href="#"><li>First-Time Undergraduate</li></a>
+                   <a href="#"><li>Transfer Students</li></a>
+                   <a href="#"><li>Adult Students</li></a>
+                   <a href="#"><li>Master&rsquo;s Programs</li></a>
+                   <a href="#"><li>Military Veterans</li></a>
+                   <a href="#"><li>International Students</li></a>
+                   <a href="#"><li>Out-of-State</li></a>
+                   <a href="#"><li>Re-Admit</li></a>
+                   <a href="#"><li>Non-Degree</li></a>
+                   <a href="#"><li>Concurrently Enrolled</li></a>
+                   <a href="#">Cost</li></a>
                  </ul>
                </li>
                <li id="nav-academics">
-                 <a class="mobile-header mobile-academics">Academics</a>
+                 <a class="mobile-header mobile-academics"><span class="fa fa-chevron-down pull-right"></span>Academics</a>
                  <ul class="pushdown-menu pushdown-academics">
-                   <li><a href="/programs/">Academic Programs</a></li>
-                   <li><a href="/las/">College of Letters, Arts and Sciences</a></li>
-                   <li><a href="/cps/">College of Professional Studies</a></li>
-                   <li><a href="/business/">College of Business</a></li>
-                   <li><a href="/education/">School of Education</a></li>
-                   <li><a href="/fys/">First Year Success</a></li>
-                   <li><a href="#">Academic Support</a></li>
-                   <li><a href="#">Online Courses/Extended Campus</a></li>
-                   <li><a href="#">Special Programs</a></li>
+                   <a href="/programs/"><li>Academic Programs</li></a>
+                   <a href="/las/"><li>College of Letters, Arts and Sciences</li></a>
+                   <a href="/cps/"><li>College of Professional Studies</li></a>
+                   <a href="/business/"><li>College of Business</li></a>
+                   <a href="/education/"><li>School of Education</li></a>
+                   <a href="/fys/"><li>First Year Success</li></a>
+                   <a href="#"><li>Academic Support</li></a>
+                   <a href="#"><li>Online Courses/Extended Campus</li></a>
+                   <a href="#"><li>Special Programs</li></a>
                  </ul>
                </li>
                <li id="nav-campus">
-                 <a class="mobile-header mobile-campus">Campus Life</a>
+                 <a class="mobile-header mobile-campus"><span class="fa fa-chevron-down pull-right"></span>Campus Life</a>
                  <ul class="pushdown-menu pushdown-campus">
-                   <li><a href="/campuslife/">Campus Life</a></li>
-                   <li><a href="/studentactivities/">Student Activities</a></li>
-                   <li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li>
-                   <li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li>
-                   <li><a href="/studentengagementandwellness/">Student Engagement &#38; Wellness</a></li>
-                   <li><a href="/campuslife/studentpublications/">Student Media</a></li>
-                   <li><a href="">Student Organizations</a></li>
-                   <li><a href="">Student Resources</a></li>
+                   <a href="/campuslife/"><li>Campus Life</li></a>
+                   <a href="/studentactivities/"><li>Student Activities</li></a>
+                   <a href="/campuslife/wellnessrecreation/"><li>Health &amp; Counseling</li></a>
+                   <a href="/campuslife/involvementrecreation/"><li>Involvement &amp; Recreation</li></a>
+                   <a href="/studentengagementandwellness/"><li>Student Engagement &#38; Wellness</li></a>
+                   <a href="/campuslife/studentpublications/"><li>Student Media</li></a>
+                   <a href=""><li>Student Organizations</li></a>
+                   <a href=""><li>Student Resources</li></a>
                  </ul>
                </li>
                <li id="nav-alumni">
-                 <a class="mobile-header mobile-alumni menu-last">Alumni</a>
+                 <a class="mobile-header mobile-alumni menu-last"><span class="fa fa-chevron-down pull-right"></span>Alumni</a>
                  <ul class="pushdown-menu pushdown-alumni">
-                   <li><a href="/alumni/">Alumni</a></li>
-                   <li><a href="/alumni/careerservices/">Career Services</a></li>
-                   <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
-                   <li><a href="">MSU Denver Magazine</a></li>
-                   <li><a href="/alumni/continuingeducation/">Continuing Education</a></li>
-                   <li><a href="/alumni/studentalumniassociation/">Student Alumni Association</a></li>
-                   <li><a href="">Alumni Events</a></li>
+                   <a href="/alumni/"><li>Alumni</li></a>
+                   <a href="/alumni/careerservices/"><li>Career Services</li></a>
+                   <a href="/alumni/alumnibenefits/"><li>Alumni Benefits</li></a>
+                   <a href=""><li>MSU Denver Magazine</li></a>
+                   <a href="/alumni/continuingeducation/"><li>Continuing Education</li></a>
+                   <a href="/alumni/studentalumniassociation/"><li>Student Alumni Association</li></a>
+                   <a href=""><li>Alumni Events</li></a>
                  </ul>
                </li>
-               <li id="nav-search"><div><span class="glyphicon glyphicon-search search-desktop"></span></div></li>
+               <li id="nav-search"><div><span class="fa fa-search search-desktop"></span></div></li>
         <!-- Hidden Search Bar-->
               <form action="https://www.msudenver.edu/search">
                 <div id="search-input" class="inner-addon left-addon search-input-desktop" role="search" action="https://www.msudenver.edu/search">
-                  <span class="glyphicon glyphicon-search glyphicon-opened"></span>
+                  <span class="fa fa-search fa-search-opened"></span>
                   <input  id="q" name="q" type="text" class="home-input" placeholder="SEARCH MSU DENVER" tabindex="2"; style="margin-left: -3px; outline: none;";>
               <!-- AUTO SUGGEST -->
               <!-- Code auto suggest server by DEV, PROD, etc. -->
@@ -111,14 +111,14 @@
                       <button type="submit" class="search-button" id="qButton">SEARCH</button>
                     </a>
                   </div>
-                  <span id="nav-search-close" class="glyphicon glyphicon-remove"></span>
+                  <span id="nav-search-close" class="fa fa-close"></span>
                 </div> <!-- search-input -->
               </form>
             </ul>
-    
+
         </nav>
 
-<<<<<<< HEAD
+
       </div>
 
       <!-- mobile search-input -->
@@ -126,7 +126,7 @@
         <div id="" class="" role="search" action="https://www.msudenver.edu/search">
                 <div id="content-nav-mobile">
                   <div id="search-input" class="inner-addon left-addon search-input-mobile">
-                      <span class="glyphicon glyphicon-search glyphicon-opened-mobile"></span>
+                      <span class="fa fa-search fa-search-opened-mobile"></span>
                             <input  id="q"
                               name="q"
                               type="text"
@@ -145,8 +145,7 @@
         </div>
       </form>
       <!-- end mobile search-input -->
-=======
->>>>>>> origin/2column-dev-to-header-merge
+
 
     </div>
 
@@ -161,6 +160,7 @@
 
 
 <!--CDN-->
+
 <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css' media='screen'>
 <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>-->
@@ -187,18 +187,18 @@ $('.search-text-mobile').focusout(function () {
 });
 
 // when desktop search icon clicked: open/close nav bar, change mobile search glyph and hamburger background colors
-$('.glyphicon-search-mobile').click(function(){
+$('.fa-search-mobile').click(function(){
    $('.search-input-mobile').slideToggle();
    $('#content-nav').removeClass('in');
    $('.fa-bars').css('background-color', 'transparent');
-   $('.glyphicon-search-mobile').css('background-color', '#005fae');
+   $('.fa-search-mobile').css('background-color', '#005fae');
 });
 
 // when hamburger clicked, hide search bar and change hamburger/search glyph background colors ***NEEDS FIXING SINCE ORIGINAL MOBILE DESIGN WAS MODIFIED***
 $('.navbar-toggle').click(function(){
    $('.search-input-mobile').hide();
    $('.fa-bars').css('background-color', '#005fae');
-   $('.glyphicon-search-mobile').css('background-color', 'transparent');
+   $('.fa-search-mobile').css('background-color', 'transparent');
    $('#content-nav').toggleClass('in');
 });
 
@@ -229,7 +229,7 @@ else {
 $('.search-desktop').click(function(){
    $('#content-nav').css('max-height', '55px');
 });
-$('.glyphicon-remove').click(function(){
+$('.fa-close').click(function(){
    $('#content-nav').css('max-height', '');
 });
 </script>
